# wyrd

./: .gitignore  AGENTS.md  CRON.md  LICENSE  NEXT_SESSION.md  PLAN.md  README.md  _bench_deepcopy.py  _prototype_overlay.py  _run_tests.py  add_methods.patch  methods.txt  methods_to_add.py  mud_world.patch  pyproject.toml  setup.py  wyrd-42.json
.hermes/: last_session.md  next_prompt.md
docs/: architecture.md  chronicles.md  cli.md  design.md  doc-conventions.md  embody.md  explorer.md  export.md  faction.md  generation.md  lore.md  magic.md  narrative.md  overview.md  pantheon.md  query.md  rendering.md  serialization.md  simulation.md  svg-export.md  tests.md  world.md
include/: wyrd.h
src/: __init__.py  __main__.py  adventure.py  ask.py  bestiary.py  branch.py  cataclysm.py  chronicles.py  economy.py  embody.py  embody_tui.py  explore.py  export_chronicles_html.py  export_html.py  export_svg.py  export_ttrpg.py  faction.py  faction_sim.py  gateway.py  generate.py  lookup.py  lore.py  magic.py  mud_parser.py  mud_sim.py  mud_world.py  mud_world.py.new  narrative.py  query.py  religion.py  render.py  room.py  serialize.py  serve.py  shop.py  sim.py  tui.py  tui_gateway.py  tui_mud.py  viewer.py  (+2 more)
tests/: conftest.py  test_adventure.py  test_api.py  test_ask.py  test_bestiary.py  test_cataclysm.py  test_chronicles.py  test_chronicles_smoke.py  test_economy.py  test_embody.py  test_explore.py  test_export_ttrpg.py  test_faction.py  test_faction_sim.py  test_gateway.py  test_generate.py  test_lore.py  test_magic.py  test_monthly_sim.py  test_mud_parser.py  (+13 more)
(+3 files in other folders)
